# ptgen

./: .arch-inventory  .gitignore  Makefile.am  config.h.in  configure.ac  expr.cc  expr.h  images.cc  images.h  interp.cc  interp.h  matrices.cc  matrices.h  objects.h  parse.cc  parse.h  parse.yy  pngwrite.cc  pngwrite.h  ptgen.cc  ptgen.h  rand.h  scan.cc  scan.ll  sym.cc  sym.h
doc/: .arch-inventory  Makefile.am  ptgen.html
tests/: Makefile.am  clouds.pt  mandel.pt  marble1.pt  marble2.pt  planet.pt  sine-base.pt  sine.pt  stars.pt  test-apply.pt  test-colormap.pt  test-compose.pt  test-convolve.pt  test-convolve2.pt  test-create.pt  test-greyscale.pt  test-lang1.pt  test-lang10.pt  test-lang2.pt  test-lang3.pt  test-lang4.pt  test-lang5.pt  test-lang6.pt  test-lang7.pt  test-lang8.pt  test-lang9.pt  test-linear.pt  test-noise1.pt  test-noise2.pt  test-noise3.pt  test-op-add.pt  test-op-blend.pt  test-op-color.pt  test-op-darken.pt  test-op-diff.pt  test-op-dissolve.pt  test-op-hue.pt  test-op-lighten.pt  test-op-mult.pt  test-op-overlay.pt  (+10 more)
