TESTS = \
test-create.pt \
test-linear.pt test-spline.pt test-spline2.pt \
test-noise1.pt test-noise2.pt test-noise3.pt test-perlin.pt \
test-greyscale.pt test-compose.pt \
test-apply.pt test-colormap.pt test-convolve.pt test-convolve2.pt \
test-lang1.pt test-lang2.pt test-lang3.pt \
test-lang4.pt test-lang5.pt test-lang6.pt \
test-lang7.pt test-lang8.pt test-lang9.pt \
test-lang10.pt \
test-op-add.pt test-op-blend.pt test-op-color.pt test-op-darken.pt \
test-op-diff.pt test-op-dissolve.pt test-op-hue.pt test-op-lighten.pt \
test-op-mult.pt test-op-overlay.pt test-op-sat.pt test-op-screen.pt \
test-op-subtract.pt test-op-value.pt \
clouds.pt marble1.pt marble2.pt stars.pt wood.pt mandel.pt \
whirl-base.pt whirl.pt sine-base.pt sine.pt planet.pt

TESTS_ENVIRONMENT = $(top_builddir)/ptgen -o/dev/null --size=64
dist_noinst_DATA = $(TESTS)
